--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="p-6">
                     <h3 class="text-xl font-bold mb-2">Sci-Factory TD</h3>
                     <p class="text-gray-400 mb-4">Tower Defense with elements of resource management</p>
-                    <a href="game1.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition-colors">View Project</a>
+                    <a href="sci-factory.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition-colors">View Project</a>
                 </div>
             </div>
         </div>
